Moved to Notebook

--- a/FeatureSelection.ipynb
+++ b/FeatureSelection.ipynb
@@ -9,6 +9,7 @@
     "What could possibly go wrong?\n",
     "5/10/2020\n",
     "\n",
+    "First you scale\n",
     "Feature Selection and Reduction\n",
     "\n",
     "Feature selection and reduction is a critical step in designing a machine learning project.\n",
@@ -29,39 +30,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8000, 27)\n",
+      "[[ 0.58150566  0.83602702  0.24603799 ...  0.15065092 -0.16947817\n",
+      "   0.95884608]\n",
+      " [ 1.49636266  1.55642944  1.21534741 ... -1.02291422 -1.20706183\n",
+      "   0.95884608]\n",
+      " [-1.7373147  -1.68538148  0.36720167 ... -0.22275611  0.1269743\n",
+      "  -1.04292026]\n",
+      " ...\n",
+      " [ 0.06959122 -0.00444248  1.21534741 ... -1.26296378 -0.68827\n",
+      "   0.95884608]\n",
+      " [-1.00745649 -1.44524733  0.24603799 ... -0.47614302  0.60870957\n",
+      "  -1.04292026]\n",
+      " [ 0.48773915 -0.00444248 -1.08676245 ... -0.22275611  0.34931366\n",
+      "  -1.04292026]]\n",
+      "     Score                   Feature\n",
+      "0   1692.0                STO_strike\n",
+      "1   1550.0                30 day SMA\n",
+      "2   1463.0    STO_open_strike_delta%\n",
+      "3   1443.0   STO_offer_strike_delta%\n",
+      "4   1292.0                45 day SMA\n",
+      "5   1073.0                15 day SMA\n",
+      "6    973.0                3 days old\n",
+      "7    968.0                10 day SMA\n",
+      "8    950.0             STO_offer_ARR\n",
+      "9    942.0                4 days old\n",
+      "10   881.0                2 days old\n",
+      "11   861.0                5 days old\n",
+      "12   849.0              STO_ask_fee%\n",
+      "13   836.0       stock_price_at_open\n",
+      "14   829.0                1 days old\n",
+      "15   816.0  stock_price_at_STO_offer\n",
+      "16   628.0                45 day vel\n",
+      "17   439.0                Yearly Min\n",
+      "18    30.0                30 day vel\n",
+      "19    28.0             STO_days_long\n",
+      "20    19.0               ER - Expiry\n",
+      "21     9.0                10 day vel\n",
+      "22     6.0                Yearly Max\n",
+      "23     3.0                 5 day vel\n",
+      "24     3.0                15 day vel\n",
+      "25     1.0                 2 day vel\n",
+      "26     NaN                     label\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.feature_selection import SelectKBest\n",
-    "from sklearn.feature_selection import chi2\n",
+    "from sklearn.feature_selection import SelectKBest, chi2, f_classif\n",
+    "from sklearn.preprocessing     import StandardScaler\n",
     "\n",
-    "data = pd.read_csv(\"D://Blogs//train.csv\")\n",
+    "raw_features = pd.read_csv('opt_sample.csv', index_col = 0)\n",
+    "print(raw_features.shape)\n",
+    "#print(raw_features['label'])\n",
+    "#features_np = raw_features.copy()\n",
+    "features_np = raw_features.to_numpy(copy = True)\n",
+    "#print('features_np')\n",
+    "#print(features_np)\n",
+    "#print(type(features_np))\n",
+    "scaler = StandardScaler()\n",
+    "features = scaler.fit_transform(features_np)\n",
+    "#print(features)\n",
+    "#print(features.head())\n",
+    "#print(features.columns.tolist())\n",
     "\n",
-    "#read X_train\n",
-    "#read y_train\n",
+    "X_train = features[:,:26]  #independent features (columns)\n",
+    "#print('X_train')\n",
+    "#print(X_train.head(5))\n",
+    "y_train = features[:,-1]    #label column\n",
+    "#print('y_train')\n",
+    "#print(y_train.head())\n",
     "\n",
-    "X = data.iloc[:,0:20]  #independent columns\n",
-    "y = data.iloc[:,-1]    #target column i.e price range\n",
-    "#apply SelectKBest class to extract top 10 best features\n",
-    "bestfeatures = SelectKBest(score_func=chi2, k=10)\n",
-    "fit = bestfeatures.fit(X,y)\n",
-    "dfscores = pd.DataFrame(fit.scores_)\n",
-    "dfcolumns = pd.DataFrame(X.columns)\n",
-    "#concat two dataframes for better visualization \n",
-    "featureScores = pd.concat([dfcolumns,dfscores],axis=1)\n",
-    "featureScores.columns = ['Specs','Score']  #naming the dataframe columns\n",
-    "print(featureScores.nlargest(10,'Score'))  #print 10 best features\n",
+    "#apply SelectKBest class to measure and rank features.\n",
+    "\n",
+    "bestfeatures = SelectKBest(score_func=f_classif, k='all')\n",
+    "fit = bestfeatures.fit(X_train,y_train)\n",
+    "feature_scores = pd.DataFrame(fit.scores_)\n",
+    "feature_columns = pd.DataFrame(raw_features.columns)\n",
+    "#print('feature_columns')\n",
+    "#print(feature_columns)\n",
+    "\n",
+    "#print(feature_scores.head(5), feature_columns.head(5))\n",
+    "\n",
+    "feature_scores = pd.concat([feature_scores, feature_columns],axis=1)\n",
+    "#print(feature_scores.head(8))\n",
+    "feature_scores.columns = ['Score', 'Feature']\n",
+    "#print(feature_scores.head(5))\n",
+    "feature_scores.sort_values(['Score'], ascending = False, inplace = True)\n",
+    "feature_scores = feature_scores.reset_index(drop = True)\n",
+    "feature_scores['Score'] = round(feature_scores['Score']) \n",
+    "print(feature_scores)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'seaborn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-51-95e970e067ee>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Seaborn heat map\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msns\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
+     ]
+    }
+   ],
    "source": [
     "# Seaborn heat map\n",
     "import seaborn as sns\n",
