After desktop reinstall

--- a/FeatureSelection.ipynb
+++ b/FeatureSelection.ipynb
@@ -114,10 +114,7 @@
     "feature_scores.sort_values(['Score'], ascending = False, inplace = True)\n",
     "feature_scores = feature_scores.reset_index(drop = True)\n",
     "feature_scores['Score'] = round(feature_scores['Score']) \n",
-    "print(feature_scores)\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(feature_scores)\n"
    ]
   },
   {
