--- a/OptionTradingFeatures.ipynb
+++ b/OptionTradingFeatures.ipynb
@@ -282,7 +282,7 @@
     }
    ],
    "source": [
-    "SMA_periods = [45, 30, 15, 10]\n",
+    "SMA_periods = [45, 30, 26, 16, 12, 8]\n",
     "\n",
     "plot_cols = []\n",
     "for days in SMA_periods:\n",
@@ -388,9 +388,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Third, let's calculate several popular stock oscillators. Stock traders who use technical analysis often use these oscillators to provide trading signals. Will these oscillators provide and benefit in trading stock options? Eventually we will find out.\n",
+    "\n",
+    "The oscillators:\n",
+    "- Relative Strength Indicator (RSI)\n",
+    "- Money Flow Index (MFI)\n",
+    "- Moving Averge Convergence / Divergence (MACD)\n",
+    "\n",
+    "You can learn about these oscillators at many investing websites, such as investopedia.com. Like all stock investing tools, advice, and formulas, use these at your own risk. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate a few stock trading oscillators\n",
+    "# We create several intermediate columns to facilitate vector operations.\n",
+    "# At the end we delete these intermediate columns.\n",
+    "\n",
+    "# Relative Strength Indicator (RSI). Shows overbought / Oversold. Requires 14 days of history\n",
+    "\n",
+    "stock_price_features['daily change'] = stock_price_features['close'] - stock_price_features['1 days old']\n",
+    "stock_price_features['daily gain'] = 0.0\n",
+    "stock_price_features['daily gain'] = stock_price_features['daily change'].where(stock_price_features['daily change']<0.0,\\\n",
+    "                                                                                stock_price_features['daily change'])\n",
+    "stock_price_features['daily loss'] = 0.0\n",
+    "stock_price_features['daily loss'] = stock_price_features['daily change'].where(stock_price_features['daily change']>0.0,\\\n",
+    "                                                                                0.0-stock_price_features['daily change'])\n",
+    "\n",
+    "stock_price_features['RSI'] = 100.0 - (100.0 / (1.0 + (stock_price_features['daily gain'].rolling(14).mean() / \\\n",
+    "                                                      stock_price_features['daily loss'].rolling(14).mean())))\n",
+    "\n",
+    "# Money Flow Index (MFI). Value is negative if Open price higher than Close price.\n",
+    "\n",
+    "stock_price_features['raw MFI'] = (stock_price_features['High'] + stock_price_features['low'] + stock_price_features['Close']) \\\n",
+    "                                   * stock_price_features['Volume'] / 3.0\n",
+    "\n",
+    "stock_price_features['pos MFI'] = 0.0\n",
+    "stock_price_features['pos MFI'] = stock_price_features['raw MFI'].where(stock_price_features['raw MFI'] < \\\n",
+    "                                        stock_price_features['raw MFI'].shift(-1), stock_price_features['raw MFI'])\n",
+    "\n",
+    "stock_price_features['neg MFI'] = 0.0\n",
+    "stock_price_features['neg MFI'] = stock_price_features['raw MFI'].where(stock_price_features['raw MFI'] > \\\n",
+    "                                        stock_price_features['raw MFI'].shift(-1), stock_price_features['raw MFI'])\n",
+    "\n",
+    "stock_price_features['MFI'] = 100.0 - (100.0 / (1.0 + (stock_price_features['pos MFI'].rolling(14).mean() / \\\n",
+    "                                                       stock_price_features['neg MFI'].rolling(14).mean())))\n",
+    "\n",
+    "\n",
+    "# MACD. 12 Day EMA - 26 Day EMA. Use SMAs to calculate EMAs.\n",
+    "EMA_periods = [25, 12]\n",
+    "for days in EMA_periods:\n",
+    "    EMA_col_label = str(days) + ' day EMA'\n",
+    "    stock_price_features[EMA_col_label] = stock_price_features['Close'].rolling(window = days).mean()\n",
+    "\n",
+    "stock_price_features['12 Day EMA'] = \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Remember we mentioned two features which are exceptions to the 45 day stock prices. They are:\n",
     "\n",
-    "1. 12 month high/low for the stock price. We suuspect this may have some predictive value, enough to test it.\n",
+    "1. 12 month high/low for the stock price. We suspect this may have some predictive value, enough to test it.\n",
     "2. Days until the next Earning Report. We know that stock prices will move rapidly following an earnings report, especially if the earnings are significantly different from the analysts' predictions. Predicting earnings is very difficult, and prediting market reacion to earnings is even more challenging. So, we just want to avoid optionw with expiry dates immediately after the earnings report date.\n",
     "\n",
     "This code creates the rolling 12 month high/low stock prices. Notice we used the function .rolling again.\n",
