--- a/FeatureSelection.ipynb
+++ b/FeatureSelection.ipynb
@@ -74,8 +74,16 @@
     "import numpy as np\n",
     "from sklearn.feature_selection import SelectKBest, chi2, f_classif\n",
     "from sklearn.preprocessing     import StandardScaler\n",
+    "from sklearn.decomposition     import PCA\n",
+    "\n",
     "\n",
     "raw_features = pd.read_csv('opt_sample.csv', index_col = 0)\n",
+    "\n",
+    "# Remove duplicate features\n",
+    "\n",
+    "dup_features = ['STO_open_strike_delta%', 'stock_price_at_open']\n",
+    "\n",
+    "\n",
     "print(raw_features.shape)\n",
     "#print(raw_features['label'])\n",
     "#features_np = raw_features.copy()\n",
@@ -159,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "got to selector start.\n",
+      "starting selector.\n",
       "finished selector.\n",
       "[ True False False False  True False False False False False  True False\n",
       "  True  True False False False False False False False False False False\n",
@@ -175,7 +183,7 @@
     "from sklearn.svm import SVR\n",
     "estimator = SVR(kernel=\"linear\")\n",
     "selector = RFE(estimator, 5, step=1)\n",
-    "print('got to selector start.')\n",
+    "print('starting selector.')\n",
     "selector = selector.fit(X_train, y_train)\n",
     "print('finished selector.')\n",
     "print(selector.support_)   # selected features\n",
@@ -184,10 +192,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.27135822 -0.26464715 -0.01612873  0.05710373 -0.27198508  0.06453596\n",
+      "  -0.01989874 -0.02540166 -0.18037594 -0.22714817 -0.26900246 -0.27819557\n",
+      "  -0.11561876 -0.02313946 -0.27831257 -0.27875335 -0.27789592 -0.27429242\n",
+      "  -0.26830007 -0.25421778 -0.21032542 -0.12216121 -0.08027327 -0.02707819\n",
+      "   0.02511631  0.05510382 -0.10767463]\n",
+      " [ 0.05149338 -0.11509742 -0.0505549   0.42736777  0.05141299  0.44685516\n",
+      "  -0.49927024 -0.50263173 -0.02273108 -0.01259061  0.01983016  0.03410354\n",
+      "  -0.04423166 -0.04138056  0.05098304  0.04794072  0.04225105  0.03618843\n",
+      "   0.03104359  0.03415807  0.07369014  0.08676416  0.07245056  0.04401971\n",
+      "   0.01105625 -0.06367671 -0.23307638]]\n",
+      "[12.40885887  3.61021521]\n",
+      "[0.45952992 0.13369496]\n",
+      "X_reduced\n",
+      "PCA(copy=True, iterated_power='auto', n_components=2, random_state=None,\n",
+      "    svd_solver='auto', tol=0.0, whiten=False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.decomposition     import PCA\n",
+    "\n",
+    "X_reduced = PCA(n_components = 2).fit(scaled_features)\n",
+    "print(X_reduced.components_)\n",
+    "print(X_reduced.explained_variance_)\n",
+    "print(X_reduced.explained_variance_ratio_)\n",
+    "\n",
+    "print('X_reduced')\n",
+    "print(X_reduced)"
+   ]
   },
   {
    "cell_type": "code",
