--- a/DataGlue040.ipynb
+++ b/DataGlue040.ipynb
@@ -8,9 +8,10 @@
     "Moved to Jupyter Notebook 5/11/20\n",
     "\n",
     "1. Create stock features - SMAs, velocities, oscillators - MACD, RSI, MFI, etc, Days to ER\n",
+    "     Completed RSI, MFI, and MACD 5/17/20\n",
     "2. Merge / join with Option trade records\n",
     "3. Define label. \n",
-    "4. Scaling. Chexk for outliers. Run standardScaler.\n",
+    "4. Scaling. Check for outliers. Run standardScaler.\n",
     "5. Feature Selection / Reduction - Univariate, Correlation Heat Map, RFE, PCA. Shoose final features for first run.\n",
     "6. Test many Learners against single trades. Pick best few.\n",
     "7. Measure Learners against portfolio metrics. \n",
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +54,7 @@
     "from sklearn.preprocessing  import StandardScaler\n",
     "from sklearn.neighbors      import KNeighborsClassifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.ensemble       import RandomForestClassifier\n",
+    "from sklearn.ensemble       import RandomForestClassifier, AdaBoost\n",
     "from sklearn.datasets       import make_classification\n",
     "from sklearn.neighbors      import KNeighborsClassifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
@@ -135,7 +136,7 @@
    "source": [
     "## Functions\n",
     "\n",
-    "- TestProbe - used for debugging DataGlue before moved to Notebook. May not need?\n",
+    "- TestProbe - used for debugging DataGlue before moved to Notebook. Maybe the notebook replaces this?\n",
     "- PriceFeatureCalc - inputs  = XOM OHLC.csv\n",
     "                   - outputs = SMA features, Yearly High/Low features, Days to ER\n",
     "- VelocityFeatureCalc - calculates price velocity features from stock price OHLC dataframe\n",
@@ -149,12 +150,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Main Program\n"
+    "## Functions\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +335,164 @@
       "22    90.982419\n",
       "23    84.330644\n",
       "24    84.890279\n",
-      "Name: RSI, dtype: float64\n"
+      "Name: RSI, dtype: float64\n",
+      "0          NaN\n",
+      "1    -0.009023\n",
+      "2     0.423846\n",
+      "3    -0.382935\n",
+      "4    -1.148117\n",
+      "5     0.356545\n",
+      "6    -0.788590\n",
+      "7     0.524330\n",
+      "8    -0.445755\n",
+      "9     0.597483\n",
+      "10    0.437767\n",
+      "11    0.451205\n",
+      "12    0.452375\n",
+      "13    0.739632\n",
+      "14   -0.203387\n",
+      "15   -0.010994\n",
+      "16    0.724904\n",
+      "17    0.793472\n",
+      "18    0.330506\n",
+      "19    0.225876\n",
+      "Name: price_delta, dtype: float64\n",
+      "0     5.979647e+08\n",
+      "1     0.000000e+00\n",
+      "2     8.672145e+08\n",
+      "3     0.000000e+00\n",
+      "4     0.000000e+00\n",
+      "5     6.365384e+08\n",
+      "6     0.000000e+00\n",
+      "7     7.344957e+08\n",
+      "8     0.000000e+00\n",
+      "9     7.403316e+08\n",
+      "10    7.880089e+08\n",
+      "11    7.973658e+08\n",
+      "12    7.416262e+08\n",
+      "13    8.611103e+08\n",
+      "14    0.000000e+00\n",
+      "Name: UpMoney, dtype: float64 0              NaN\n",
+      "1              NaN\n",
+      "2              NaN\n",
+      "3              NaN\n",
+      "4              NaN\n",
+      "5              NaN\n",
+      "6              NaN\n",
+      "7              NaN\n",
+      "8              NaN\n",
+      "9              NaN\n",
+      "10             NaN\n",
+      "11             NaN\n",
+      "12             NaN\n",
+      "13    4.831897e+08\n",
+      "14    4.404779e+08\n",
+      "Name: UpMoneySum, dtype: float64\n",
+      "0     5.979647e+08\n",
+      "1     7.964538e+08\n",
+      "2     0.000000e+00\n",
+      "3     1.109844e+09\n",
+      "4     9.630965e+08\n",
+      "5     0.000000e+00\n",
+      "6     8.178020e+08\n",
+      "7     0.000000e+00\n",
+      "8     6.478191e+08\n",
+      "9     0.000000e+00\n",
+      "10    0.000000e+00\n",
+      "11    0.000000e+00\n",
+      "12    0.000000e+00\n",
+      "13    0.000000e+00\n",
+      "14    9.118483e+08\n",
+      "Name: DnMoney, dtype: float64 0              NaN\n",
+      "1              NaN\n",
+      "2              NaN\n",
+      "3              NaN\n",
+      "4              NaN\n",
+      "5              NaN\n",
+      "6              NaN\n",
+      "7              NaN\n",
+      "8              NaN\n",
+      "9              NaN\n",
+      "10             NaN\n",
+      "11             NaN\n",
+      "12             NaN\n",
+      "13    3.523557e+08\n",
+      "14    3.747760e+08\n",
+      "Name: DnMoneySum, dtype: float64\n",
+      "Money Flow\n",
+      "0           NaN\n",
+      "1           NaN\n",
+      "2           NaN\n",
+      "3           NaN\n",
+      "4           NaN\n",
+      "5           NaN\n",
+      "6           NaN\n",
+      "7           NaN\n",
+      "8           NaN\n",
+      "9           NaN\n",
+      "10          NaN\n",
+      "11          NaN\n",
+      "12          NaN\n",
+      "13    57.829257\n",
+      "14    54.029541\n",
+      "15    54.320749\n",
+      "16    54.228806\n",
+      "17    64.481443\n",
+      "18    72.957275\n",
+      "19    73.241040\n",
+      "20    74.201930\n",
+      "21    74.311277\n",
+      "22    80.318470\n",
+      "23    72.766786\n",
+      "24    74.307645\n",
+      "25    74.447885\n",
+      "26    68.066726\n",
+      "27    68.130179\n",
+      "28    74.855742\n",
+      "29    75.258857\n",
+      "Name: MFI, dtype: float64\n",
+      "MACD\n",
+      "0     0.000000\n",
+      "1     0.004195\n",
+      "2     0.010654\n",
+      "3     0.005586\n",
+      "4    -0.014981\n",
+      "5    -0.041442\n",
+      "6    -0.082973\n",
+      "7    -0.116697\n",
+      "8    -0.156214\n",
+      "9    -0.185568\n",
+      "10   -0.205101\n",
+      "11   -0.203049\n",
+      "12   -0.180618\n",
+      "13   -0.138059\n",
+      "14   -0.091024\n",
+      "15   -0.032482\n",
+      "16    0.036096\n",
+      "17    0.115273\n",
+      "18    0.196542\n",
+      "19    0.284430\n",
+      "20    0.368502\n",
+      "21    0.448997\n",
+      "22    0.533238\n",
+      "23    0.608376\n",
+      "24    0.677491\n",
+      "25    0.747541\n",
+      "26    0.799000\n",
+      "27    0.831986\n",
+      "28    0.851121\n",
+      "29    0.864993\n",
+      "30    0.873678\n",
+      "31    0.895881\n",
+      "32    0.917484\n",
+      "33    0.947223\n",
+      "34    0.964560\n",
+      "35    0.983435\n",
+      "36    0.999497\n",
+      "37    1.008219\n",
+      "38    1.019957\n",
+      "39    1.025596\n",
+      "Name: MACD, dtype: float64\n"
      ]
     }
    ],
@@ -343,12 +501,16 @@
     "def OscillatorsFeatureCalc():\n",
     "    #\n",
     "    # Calculate several common oscillators\n",
-    "    #     RSI - Relative Strength - Just a SMA of gains vs. losses over 14 periods.\n",
-    "    #     MFI - volume weighted RSI\n",
-    "    #     MACD - Convergence / Divergence of 16 and 26 day EMAs.\n",
+    "    #     RSI - Relative Strength - Just a SMA of gains vs. losses over 14 periods. NOT EMA, as some suggest!\n",
+    "    #     MFI - volume weighted RSI - Volume weighted RSI. Also based on a 14 day SMA.\n",
+    "    #     MACD - 9 period EMA of (12 period EMA - 26 period EMA).\n",
+    "    #     Consider Bollinger Bands, Put/Cll Raito, and Open Interest.\n",
     "    \n",
     "    global stock_OHLC_data\n",
     "    #global stock_price_features\n",
+    "    \n",
+    "    #++++++++++\n",
+    "    # RSI Calculation\n",
     "    RSI_period = 14\n",
     "\n",
     "    signals = pd.DataFrame()\n",
@@ -368,6 +530,47 @@
     "    \n",
     "    signals['RSI'] = 100 - (100 / (1 + (signals['Upsum'] / signals['Dnsum'])))\n",
     "    print(signals['RSI'].head(25))\n",
+    "    \n",
+    "    #++++++++++\n",
+    "    # MFI Calculation\n",
+    "    \n",
+    "    MFI_period = 14\n",
+    "    signals['typical_price'] = (stock_OHLC_data['High'] +  stock_OHLC_data['Low'] + stock_OHLC_data['Adj Close']) / 3\n",
+    "    signals['raw_money'] = signals['typical_price'] * stock_OHLC_data['Volume']\n",
+    "    signals['price_delta'] = signals['typical_price'].diff().dropna()\n",
+    "    print(signals['price_delta'].head(20))\n",
+    "    \n",
+    "    signals['UpMoney'] = 0.0\n",
+    "    signals['UpMoney'].where(signals['price_delta']<0.0,  other = signals['raw_money'], inplace = True)\n",
+    "    signals['UpMoneySum'] = signals['UpMoney'].rolling(window = MFI_period).mean()\n",
+    "    print(signals['UpMoney'].head(15), signals['UpMoneySum'].head(15))\n",
+    "        \n",
+    "    signals['DnMoney'] = 0.0\n",
+    "    signals['DnMoney'].where(signals['price_delta']>0.0, other = signals['raw_money'], inplace = True)\n",
+    "    signals['DnMoneySum'] = signals['DnMoney'].rolling(window = MFI_period).mean()\n",
+    "    print(signals['DnMoney'].head(15), signals['DnMoneySum'].head(15))\n",
+    "\n",
+    "    signals['MFI'] = 100.0 - (100.0 / (1 + (signals['UpMoneySum'] / signals['DnMoneySum'])))\n",
+    "    \n",
+    "    print('Money Flow')\n",
+    "    print(signals['MFI'].head(30))\n",
+    "    \n",
+    "    #++++++++++\n",
+    "    # MACD Calculation - You can calculate EMAs from SMAs, or just use the pandas df.ewm function\n",
+    "    \n",
+    "    signals['12 day EMA'] = stock_OHLC_data['Adj Close'].ewm(span = 12, adjust = False).mean()\n",
+    "    signals['26 day EMA'] = stock_OHLC_data['Adj Close'].ewm(span = 26, adjust = False).mean()\n",
+    "    signals['MACD'] = (signals['12 day EMA'] - signals['26 day EMA']).ewm(span = 9, adjust = False).mean()\n",
+    "    \n",
+    "    print('MACD')\n",
+    "    print(signals['MACD'].head(40))\n",
+    "    \n",
+    "    signal_cols = ['RSI', 'MFI', 'MACD']\n",
+    "    for i in signal_cols:\n",
+    "        stock_price_features[i] = signals[i]\n",
+    "          \n",
+    "          \n",
+    "          \n",
     "\n",
     "input_file_name    = 'XOMOHLC 2016-2018.csv'\n",
     "stock_OHLC_data    = pd.read_csv(input_file_name, index_col = False) \n",
