Started TradeProfile Stats
Renamed my demo binders to:
OptionsBuildFeatures
OptionsSelectFeatures
OptionsTrainLearners

--- a/OptionsTrainLearners.ipynb
+++ b/OptionsTrainLearners.ipynb
@@ -201,7 +201,7 @@
     "\n",
     "Evaluation Questions:\n",
     " - What is the meaning of the green bars and red bars?\n",
-    " - Just looking at the charts, can you identify which features are better to train the Learners? Why?\n",
+    " - By looking at the charts, can you identify which features contain more information to train the Learners? How? Why?\n",
     " - One chart shows perfect separation between the red and green bars. Why?\n",
     " - Can we use this feature to train the Learners? Why, why not?\n",
     " - In your opinion, can we train the Learners effectively with this set of features? Why, why not? \n",
