--- a/OptionsTrainLearners.ipynb
+++ b/OptionsTrainLearners.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "# Teach Your Laptop to Trade Stock Options.\n",
-    "# Notebook 2: Train Machine Learners.\n",
+    "# Notebook 3: Train Machine Learners.\n",
     "What could possibly go wrong?\n",
     "\n",
-    "5/10/2020"
+    "5/20/2020"
    ]
   },
   {
@@ -493,7 +493,7 @@
     "- How can you find the best value for the d parameter?\n",
     "- Do the same comparison and analysis for the KNNeighbors numeric suffix.\n",
     "- Why did RandomForest and KNNeighbors perform so much better than MLPerceptron and SVC?\n",
-    "- Based on the performance parameters, would you consider this exercise to be linear or nonlinear? Why, why not?\n",
+    "- Based on the performance parameters, would you consider this exercise to be linear, nonlinear, or other? Why, why not?\n",
     "\n",
     "Code Questions:\n",
     "- Change the parameter suffixes and corresponding parameters for KNNeighbor and RandomForest. Explain the results.\n",
@@ -566,10 +566,11 @@
     "Congratulations! You just trained several Learners to pick winning stock option trades. Now, you are almost ready to make a fortune in the stock market. But, first... consider these questions:\n",
     "\n",
     "- How can you improve the feature set? \n",
+    "- Which Learner(s) would you choose? Why?\n",
     "- How can you gain more confidence in your trader?\n",
     "- What is your goal? Single profitable trades, or a portfolio of trades? What's the difference?\n",
     "\n",
-    "Tune into the next exciting notebook to get the answer to these and many more questions.\n",
+    "Tune into the next exciting notebook to explore questions of maximizing portfolio results for options trading. \n",
     "\n",
     "Wishing you only profitable trades and good learning,\n",
     "\n",
