--- a/OptionsSelectFeatures.ipynb
+++ b/OptionsSelectFeatures.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -320,11 +320,24 @@
    "metadata": {},
    "source": [
     "## Choose Your Features\n",
-    "Now you have all the information you need to select the features you will use to train the Learners. Compare the rankings of each feature selector by graphing the scores with MatplotLib. Write a function to do grouped bar charts, starting with the function in the next notebook that displays grouped bar charts. How can you display the information in the most effective way to showcase your selection?\n",
+    "Now you have all the information you need to select the features you will use to train the Learners. \n",
+    "\n",
+    "Evaluation Questions\n",
+    "- Did any of the rankings surprise you? Which ones? Why?\n",
+    "- Each feature selector generated a different ranking for the features. Why?\n",
+    "- Describe comparative strengths and weaknesses of each feature selector. \n",
+    "- Which feature selector do you prefer? Why?\n",
+    "- Would you combine the rankings to get a better overall feature rank? How?  Why, or not?\n",
+    "- What is your ranking for the features? Why?\n",
+    "\n",
+    "Code Questions\n",
+    "- Compare the rankings of each feature selector by graphing the scores with MatplotLib. \n",
+    "- Write a function to do grouped bar charts, starting with the function in the next notebook that displays grouped bar charts. - How can you display the information in the most effective way to showcase your selection?\n",
+    "\n",
     "\n",
     "I am eager to hear of your adventures in learning ML and especially in your challenges and results in tackling your own applications for ML. Please email me with questions, comments, and results of your work. \n",
     "\n",
-    "I love to hear stories, so give me a shout.\n",
+    "I love to hear stories about experiences in ML, so give me a shout.\n",
     "\n",
     "Best wishes for selecting powerful features!\n",
     "\n",
